# ArXiv-Sim

./: README.md  pyproject.toml
app/: arxiv.py  summarizer.py
